# Course_work_5

./: README.md  pyproject.toml
src/: DBManager.py  api_hh.py  config.py  main.py  utils.py
